# mattStats-py

./: .gitignore  bot.py  example-config.properties  pyproject.toml  requirements.txt
