[project]
name = "mattstats-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Rossi",email = "matt@mattrossi.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-cord (>=2.6.1,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
