[tool.poetry]
name = "mattstats-py"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Matthew Rossi <12902926+MattRossi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
py-cord = "^2.6.1"
pymongo = "^4.12.0"
xlsxwriter = "^3.2.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
